nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: smohite-workspace
  labels:
    app: webnginx
spec:
  selector:
    matchLabels:
      app: nginxServer
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginxServer
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
